; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8367.c_rtl8367_led_group_set_config.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_rtl8367.c_rtl8367_led_group_set_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtl8366_smi = type { i32 }

@RTL8367_LED_CONFIG_LED_CFG_M = common dso_local global i32 0, align 4
@RTL8367_LED_CONFIG_SEL = common dso_local global i32 0, align 4
@RTL8367_LED_CONFIG_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtl8366_smi*, i32, i32)* @rtl8367_led_group_set_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8367_led_group_set_config(%struct.rtl8366_smi* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rtl8366_smi*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.rtl8366_smi* %0, %struct.rtl8366_smi** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @RTL8367_LED_CONFIG_LED_CFG_M, align 4
  %11 = load i32, i32* %5, align 4
  %12 = mul i32 %11, 4
  %13 = shl i32 %10, %12
  %14 = load i32, i32* @RTL8367_LED_CONFIG_SEL, align 4
  %15 = or i32 %13, %14
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @RTL8367_LED_CONFIG_LED_CFG_M, align 4
  %18 = and i32 %16, %17
  %19 = load i32, i32* %5, align 4
  %20 = mul i32 %19, 4
  %21 = shl i32 %18, %20
  store i32 %21, i32* %8, align 4
  %22 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %4, align 8
  %23 = load i32, i32* @RTL8367_LED_CONFIG_REG, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @REG_RMW(%struct.rtl8366_smi* %22, i32 %23, i32 %24, i32 %25)
  ret i32 0
}

declare dso_local i32 @REG_RMW(%struct.rtl8366_smi*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
